--- a/vercel.json
+++ b/vercel.json
@@ -4,6 +4,6 @@
   "devCommand": "npm run dev",
   "installCommand": "npm install",
   "env": {
-    "GEMINI_API_KEY": "@gemini_api_key"
+    "GEMINI_API_KEY": "AIzaSyBsjAWdrhhlJDbjA_1M00VGcVfYzn4Rrtw"
   }
 }
